--- a/Evaluacion Final/index.html
+++ b/Evaluacion Final/index.html
@@ -8,22 +8,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+    <!--Estilo propio-->
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
     <!--Carta de consulta para todos los Digimon-->
-    <div class="card mt-5 " style="width: 18rem;">
-        <img src="" id="imagen" class="card-img-top" alt="...">
+    <div class="card mt-5 mx-auto col-sm-12" style="width: 18rem;">
+        <img src="https://i.postimg.cc/wv9ZTJYp/D-3-Daisuke.webp" id="imagen" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <div class="dropdown">
+          <h5 id="titulo" class="card-title text-center"></h5>
+          <p id="level" class="card-text text-center"></p>
+          <div class="dropdown d-flex justify-content-center">
             <select class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="seleccion">
-                <!--dentro de este select se agregará la lista de Digimon-->
+                <option value="Seleccionar opcion">Seleccionar Digimon</option><!--dentro de este select se agregará la lista de Digimon-->
             </select>
         </div>
       </div>
-
     <!-- enlazar javascript -->
     <script src="./js/javascript.js"></script>
 </body>
