--- a/Evaluacion Final copy/index.html
+++ b/Evaluacion Final copy/index.html
@@ -6,20 +6,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--bootstrap style-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
     crossorigin="anonymous"></script>
   <!--Estilo propio-->
   <link rel="stylesheet" href="./css/style.css">
-  <title>Document</title>
+  <title>Digimon</title>
 </head>
-
-<body>
+<body id="cuerpo">
+  
   <!--Barra de Navegacion-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Digimon</a>
+    <div class="container-fluid" style="background-color: rgb(245, 191, 83) ">
+      <a class="navbar-brand w-75 d-flex" href="index.html"><img src="https://th.bing.com/th/id/R.631c4cfe9d619b033e533be5d650ffd9?rik=Mb2fFH3K6IR%2fsg&riu=http%3a%2f%2forig06.deviantart.net%2f82dc%2ff%2f2015%2f262%2f5%2f9%2fdigimon_logo_vector_by_3prsta-d9a4yb9.png&ehk=fuGYG8uR2CHhtpzC2VXfD8wPFAblnshdeLS7x2y62hM%3d&risl=&pid=ImgRaw&r=0" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -27,56 +28,42 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="d-none nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="d-none nav-link" href="#">Link</a>
           </li>
-          <li class="nav-item dropdown">
+          <li class="d-none na-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li ><a class="d-none dropdown-item" href="#">Action</a></li>
+              <li><a class="d-none dropdown-item" href="#">Another action</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="d-none dropdown-item" href="#">Something else here</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+            <a class="d-none nav-link disabled">Disabled</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <input id="buscar" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Buscar</button>
         </form>
       </div>
     </div>
   </nav>
-  <!--Carta de consulta para todos los Digimon-->
-  <div class="card mt-5 mx-auto col-sm-12" style="width: 18rem;">
-    <img src="https://i.postimg.cc/wv9ZTJYp/D-3-Daisuke.webp" id="imagen" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 id="titulo" class="card-title text-center"></h5>
-      <p id="level" class="card-text text-center"></p>
-      <div class="dropdown d-flex justify-content-center">
-        <select class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"
-          id="seleccion">
-          <option value="Seleccionar opcion">Seleccionar Digimon</option>
-          <!--dentro de este select se agregará la lista de Digimon-->
-        </select>
-        <section>
-          
-        </section>
-      </div>
-    </div>
-    <!-- enlazar javascript -->
-    <script src="./js/javascript.js"></script>
-    <!--javascript bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <section id="tarjeta" class="m-3 row row-cols-1 row-cols-md-3 g-4"></section>
+  <!-- enlazar javascript -->
+  <script src="./js/javascript.js"></script>
+  <!--javascript bootstrap-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
